updated animal shelter.

--- a/Stacks and Queues/Animal Shelter.ipynb
+++ b/Stacks and Queues/Animal Shelter.ipynb
@@ -14,53 +14,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from collections import defaultdict"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class AnimalShelter:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.shelter = defaultdict(str)\n",
+    "        self.shelter['cat'] = []\n",
+    "        self.shelter['dog'] = []\n",
+    "        \n",
+    "    def abandon(self, typ, animal):\n",
+    "        self.shelter[typ] = [animal] + self.shelter[typ]\n",
+    "        \n",
+    "    def adopt(self, typ):\n",
+    "        return self.shelter[typ].pop()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "\n"
+    "shelter = AnimalShelter()\n",
+    "cat = 'cat'\n",
+    "dog = 'dog'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[6, 5, 4, 3, 2, 1]\n"
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "shelter.abandon(dog, 'saddy')\n",
+    "shelter.abandon(cat, 'abandonded-ed')\n",
+    "shelter.abandon(dog, 'pouvre')\n",
+    "shelter.abandon(cat, 'lost')\n",
+    "shelter.abandon(dog, 'unwanted')\n",
+    "shelter.abandon(cat, 'dirty')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -69,16 +85,79 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n"
+      "defaultdict(<class 'str'>, {'cat': [], 'dog': []})\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(shelter.shelter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cat\n",
+      "dog\n"
+     ]
+    }
+   ],
+   "source": [
+    "for dic in shelter.shelter:\n",
+    "    print(dic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cat\n",
+      "abandonded-ed\n",
+      "\n",
+      "dog\n",
+      "saddy\n",
+      "\n",
+      "cat\n",
+      "lost\n",
+      "\n",
+      "dog\n",
+      "pouvre\n",
+      "\n",
+      "cat\n",
+      "dirty\n",
+      "\n",
+      "dog\n",
+      "unwanted\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in range(6):\n",
+    "    if item % 2 == 0:\n",
+    "        typ = cat\n",
+    "    else:\n",
+    "        typ = dog\n",
+    "    \n",
+    "    print(typ)\n",
+    "    print(shelter.adopt(typ))\n",
+    "    print()\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
