basics of binary trees.

--- a/Trees and Graphs/Basics.ipynb
+++ b/Trees and Graphs/Basics.ipynb
@@ -2,20 +2,87 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "class Node:\n",
+    "class BNode:\n",
     "    \n",
-    "    def __init__(self, name='', children = []):\n",
-    "        self.name = name\n",
-    "        self.children = children\n",
+    "    def __init__(self, value = None, left = None, right = None):\n",
+    "        self.value = value\n",
+    "        self.left = left\n",
+    "        self.right = right\n",
     "        \n",
-    "        "
+    "class BTree:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.root = BNode()\n",
+    "        self.head = self.root\n",
+    "    \n",
+    "\n",
+    "def inOrder(node):\n",
+    "    if node:\n",
+    "        inOrder(node.left)\n",
+    "        print(node.value)\n",
+    "        inOrder(node.right)\n",
+    "        \n",
+    "def preOrder(node):\n",
+    "    if node:\n",
+    "        print(node.value)\n",
+    "        preOrder(node.left)\n",
+    "        preOrder(node.right)\n",
+    "        \n",
+    "def postOrder(node):\n",
+    "    if node:\n",
+    "        postOrder(node.left)\n",
+    "        postOrder(node.right)\n",
+    "        print(node.value)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "btree = BTree()\n",
+    "btree.root.left = BNode(10)\n",
+    "btree.root.right = BNode(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "None\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "inOrder(btree.root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
