--- a/Trees and Graphs/Basics.ipynb
+++ b/Trees and Graphs/Basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -12,6 +12,7 @@
     "    \n",
     "    def __init__(self, value = None, left = None, right = None):\n",
     "        self.value = value\n",
+    "        self.visited = False\n",
     "        self.left = left\n",
     "        self.right = right\n",
     "        \n",
@@ -21,6 +22,8 @@
     "        self.root = BNode()\n",
     "        self.head = self.root\n",
     "    \n",
+    "def visit(node):\n",
+    "    node.visited = True\n",
     "\n",
     "def inOrder(node):\n",
     "    if node:\n",
@@ -43,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -56,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
