Notes on tries.

--- a/Trees and Graphs/Basics.ipynb
+++ b/Trees and Graphs/Basics.ipynb
@@ -85,7 +85,13 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Tries are prefix trees... \n",
+    "# Each path may be a complete word.\n",
+    "# Can be used to quickly look up word prefixes quickly.\n",
+    "# Takes O of K same as a hash table. \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
