--- a/Trees and Graphs/Basics.ipynb
+++ b/Trees and Graphs/Basics.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -90,7 +90,28 @@
     "# Each path may be a complete word.\n",
     "# Can be used to quickly look up word prefixes quickly.\n",
     "# Takes O of K same as a hash table. \n",
-    "\n"
+    "### Look up tries, more info needed: https://en.wikipedia.org/wiki/Trie\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# adjacency list (one of two common representations of a graph\n",
+    "class Graph:\n",
+    "    \n",
+    "    def __init__(self, nodes = []):\n",
+    "        self.nodes = nodes\n",
+    "        \n",
+    "class Node:\n",
+    "    \n",
+    "    def __init__(self, name = 'root', children = []):\n",
+    "        self.name = name\n",
+    "        self.chilrent = children"
    ]
   }
  ],
