--- a/Trees and Graphs/Basics.ipynb
+++ b/Trees and Graphs/Basics.ipynb
@@ -10,11 +10,12 @@
    "source": [
     "class BNode:\n",
     "    \n",
-    "    def __init__(self, value = None, left = None, right = None):\n",
+    "    def __init__(self, value = None, left = None, right = None, children = []):\n",
     "        self.value = value\n",
     "        self.visited = False\n",
     "        self.left = left\n",
     "        self.right = right\n",
+    "        self.children = children\n",
     "        \n",
     "class BTree:\n",
     "    \n",
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -111,7 +112,62 @@
     "    \n",
     "    def __init__(self, name = 'root', children = []):\n",
     "        self.name = name\n",
-    "        self.chilrent = children"
+    "        self.chilren = children"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# adjacncy matrices is the second... a boolean matrix: https://en.wikipedia.org/wiki/Adjacency_matrix\n",
+    "# breadth first searcon on an adjacency matrix is less efficient, compaered to an adjacency list. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Graph Search \n",
+    "    # http://stackoverflow.com/questions/10680180/graph-search-vs-tree-search\n",
+    "    # https://en.wikipedia.org/wiki/Facebook_Graph_Search\n",
+    "    # https://en.wikipedia.org/wiki/Graph_traversal\n",
+    "\n",
+    "# Two most common are:\n",
+    "    # Breadth first: https://en.wikipedia.org/wiki/Breadth-first_search\n",
+    "    # Using a queue is key to BST. \n",
+    "    \n",
+    "def bfs(root):\n",
+    "    queue = [] # list will suffice as queue for this\n",
+    "    root.visited()\n",
+    "    queue.insert(0, root)\n",
+    "    \n",
+    "    while queue.count() > 0:\n",
+    "        root = queue.pop()\n",
+    "        visit(root)\n",
+    "        \n",
+    "        for node in root.children:\n",
+    "            if node.visited == False:\n",
+    "                visit(node)\n",
+    "                queue.insert(0, node)\n",
+    "    \n",
+    "            \n",
+    "    # Depth first: https://en.wikipedia.org/wiki/Depth-first_search\n",
+    "    \n",
+    "def dfs(root):\n",
+    "    if not root:\n",
+    "        return None\n",
+    "    visit(root)\n",
+    "    for node in root.children:\n",
+    "        if node.visited == False:\n",
+    "            dfs(node)"
    ]
   },
   {
@@ -121,9 +177,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# adjacncy matrices is the second... a boolean matrix: https://en.wikipedia.org/wiki/Adjacency_matrix"
-   ]
+   "source": []
   }
  ],
  "metadata": {
