set up for questions.

--- a/Trees and Graphs/Basics.ipynb
+++ b/Trees and Graphs/Basics.ipynb
@@ -177,7 +177,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# bidirectional search: https://en.wikipedia.org/wiki/Bidirectional_search\n"
+   ]
   }
  ],
  "metadata": {
