prime for route node.

--- a/Trees and Graphs/Route Between Nodes.ipynb
+++ b/Trees and Graphs/Route Between Nodes.ipynb
@@ -8,7 +8,19 @@
    },
    "outputs": [],
    "source": [
-    "# directed graph, find route between two nodes. "
+    "# directed graph, find route between two nodes. \n",
+    "\n",
+    "class Graph:\n",
+    "    \n",
+    "    def __init__(self, nodes = []):\n",
+    "        self.root = nodes\n",
+    "         \n",
+    "        \n",
+    "class Node:\n",
+    "    \n",
+    "    def __init__(self, name = 'root', children = []):\n",
+    "        self.name = name\n",
+    "        self.chilren = children"
    ]
   }
  ],
