messing with algies.

--- a/Miscellaneous/Heaps.ipynb
+++ b/Miscellaneous/Heaps.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -82,19 +82,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(lengthOfLastWord(\"de\"))"
    ]
@@ -207,6 +199,99 @@
    "outputs": [],
    "source": [
     "math.gcd(21, 9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "1064.7 * 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def coverPoints(X, Y):\n",
+    "    i = 0\n",
+    "    size = X[i]\n",
+    "    \n",
+    "    if size < 2:\n",
+    "        return 0;\n",
+    "    i += 1;\n",
+    "\n",
+    "    x = X[i]\n",
+    "    y = Y[i]\n",
+    "\n",
+    "    i += 1\n",
+    "    counter = 0\n",
+    "    while i <= size:\n",
+    "\n",
+    "        x_r = x - X[i]\n",
+    "        y_r = y - Y[i]\n",
+    "\n",
+    "        x = X[i]\n",
+    "        y = Y[i]\n",
+    "\n",
+    "        x_r = abs(x_r)\n",
+    "        y_r = abs(y_r)\n",
+    "        if x_r > y_r:\n",
+    "            counter += x_r\n",
+    "        else:\n",
+    "            counter += y_r\n",
+    "        i += 1    \n",
+    "            \n",
+    "        \n",
+    "\n",
+    "    return counter\n",
+    "\n",
+    "\n",
+    "def abs(num):\n",
+    "    if num < 0:\n",
+    "        num *= -1\n",
+    "    return num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "0\n",
+      "0\n",
+      "2\n",
+      "X:  -13 Y:  -9\n",
+      "X_R  6 Y_R:  10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coverPoints([2, -7, -13], [2, 1, -9])"
    ]
   },
   {
